# AlphaZeroChess

./: .gitignore  README.md
alphazero/: CMakeLists.txt  main.cc  model.cc  model.h
